# zephyr_custom_driver

./: .gitignore  LICENSE  README.md
source/: CMakeLists.txt  prj.conf  sample.yaml
source/boards/: native_posix.conf  native_posix.overlay
source/dts/bindings/sensor/: rdt,sensor_sim.yaml
source/modules/: CMakeLists.txt  Kconfig
source/modules/sensor_sim/: CMakeLists.txt  Kconfig  sensor_sim.c  sensor_sim.h
source/modules/zephyr/: module.yml
source/src/: CMakeLists.txt  Kconfig  main.c
